# angstrom

./: .gitignore  .gitmodules  Cargo.toml  README.md  f  rust-toolchain.toml  rustc-ice-2024-07-05T17_57_24-2315.txt  rustfmt.toml  state.json
crates/action/: Cargo.toml
crates/action/src/: action_core.rs  bundle_solver.rs  cow.rs  cow_solver.rs  leader_sender.rs  lib.rs  relay_sender.rs
crates/angstrom-net/: Cargo.toml
crates/angstrom-net/src/: builder.rs  cache.rs  lib.rs  manager.rs  network.rs  pool_manager.rs  state.rs  swarm.rs
crates/angstrom-net/src/errors/: strom.rs
crates/angstrom-net/src/peers/: manager.rs  mod.rs
crates/angstrom-net/src/session/: config.rs  connection_handler.rs  handle.rs  mod.rs  protocol_handler.rs  session.rs  strom.rs
crates/angstrom-net/src/types/: message.rs  status.rs
crates/angstrom-net/tests/: main.rs  message_propagation.rs  startup.rs
crates/bundler/: Cargo.toml
crates/bundler/src/: bundle_signer.rs  cow.rs  cow_solver.rs  lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: bundle.rs  cache.rs  contract.rs  core.rs  evidence.rs  executor.rs  global.rs  guard_info.rs  guard_stages.rs  leader.rs  leader_election.rs  leader_selection.rs  lib.rs  manager.rs  round.rs  round_robin_algo.rs  round_state.rs  signer.rs  stage.rs  state.rs  unfinalized.rs  verifier.rs
crates/consensus/src/contract/: assetarray.rs  builder.rs  mod.rs  state.rs
crates/consensus/src/round/: bundle.rs  commit.rs  completed.rs  leader.rs  mod.rs  order_accumulation.rs  pre_commit.rs  pre_propose.rs  propose.rs  stage.rs  submit.rs  vote.rs
crates/eth/: Cargo.toml
crates/eth/src/: handle.rs  lib.rs  manager.rs
crates/guard-net/discv4/: Cargo.toml
crates/guard-net/discv4/src/: config.rs  lib.rs  table.rs
crates/guard-net/guard-discv4/: Cargo.toml
crates/guard-net/guard-discv4/src/: config.rs  error.rs  lib.rs  node.rs  proto.rs  test_utils.rs
crates/guard-net/guard-network/: Cargo.toml
crates/guard-net/guard-network/src/: builder.rs  cache.rs  config.rs  discovery.rs  error.rs  eth_requests.rs  import.rs  lib.rs  listener.rs  manager.rs  message.rs  messages.rs  metrics.rs  network.rs  orders.rs  state.rs  swarm.rs  transactions.rs
crates/leader/: Cargo.toml
crates/leader/src/: bundle_signer.rs  cow_solver.rs  leader_core.rs  leader_manager.rs  leader_sender.rs  lib.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/benches/: volume_solver.rs
crates/matching-engine/src/: lib.rs  manager.rs
crates/matching-engine/src/book/: mod.rs  order.rs  sort.rs  volume.rs  xpool.rs
crates/matching-engine/src/cfmm/: detritus.rs  mod.rs  uniswap.rs
crates/matching-engine/src/matcher/: mod.rs  volume.rs
crates/matching-engine/src/simulation/: amm.rs  orders.rs
crates/matching-engine/src/solver/: volume.rs
crates/matching-engine/src/strategy/: mod.rs  simplecheckpoint.rs
crates/matching-engine/tests/: tob.rs
crates/pade/: Cargo.toml
crates/pade/src/: decode.rs  encode.rs  header.rs  lib.rs  primitives.rs
crates/rpc/: Cargo.toml
crates/rpc/ipc/: Cargo.toml
crates/rpc/ipc/src/: client.rs  lib.rs  stream_codec.rs
crates/rpc/new_rpc/: Cargo.toml
crates/rpc/new_rpc/src/: lib.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-builder/src/: auth.rs  lib.rs
crates/rpc/rpc/src/: constants.rs  cors.rs  errors.rs  id_provider.rs  lib.rs  metrics.rs  txpool.rs
crates/rpc/src/: lib.rs
crates/rpc/src/api/: consensus.rs  orders.rs  quoting.rs
crates/rpc/src/impls/: consensus.rs  mod.rs  orders.rs  quoting.rs
crates/rpc/src/types/: mod.rs  quoting.rs  subscriptions.rs
crates/shared/: Cargo.toml
crates/shared/src/: bundle.rs  eip712.rs  lib.rs  safe_tx.rs  searcher.rs  signature.rs  tee_address.rs  users.rs
crates/shared/src/contract_bindings/: angstrom_spoof.rs
crates/sim/: Cargo.toml
crates/sim/src/: anvil.rs  client.rs  errors.rs  executor.rs  lib.rs  lru_db.rs  middleware.rs  reth_client.rs  revm.rs  sim.rs  slot_keeper.rs  state.rs
crates/sol-bindings/: Cargo.toml
crates/sol-bindings/src/: envelopes.rs  lib.rs  sol.rs  testnet.rs  user_types.rs
crates/sol-bindings/src/ext/: contract_bundle_ext.rs  mod.rs
crates/submission/: Cargo.toml
crates/submission/src/: lib.rs  relay_sender.rs
crates/types/: Cargo.toml  build.rs
crates/types/src/: lib.rs  pair_with_price.rs  reth_db_wrapper.rs
crates/types/src/consensus/: block.rs  bundle.rs  commit.rs  evidence.rs  genesis.rs  guard.rs  guard_info.rs  mod.rs  order_buffer.rs  pre_prepose.rs  proposal.rs  round_step.rs  state.rs  step.rs  time.rs  (+1 more)
crates/validation/: Cargo.toml  state_config.toml
crates/validation/src/: client.rs  lib.rs  lru_db.rs  revm.rs  slot_keeper.rs  state.rs  validator.rs
crates/validation/tests/: verification.rs
it-harness/: Cargo.toml
it-harness/src/: harness.rs  lib.rs
it-harness/src/net/: mod.rs  net.rs  testnet.rs
testing-tools/: Cargo.toml
testing-tools/src/: lib.rs
testing-tools/src/anvil_state_provider/: anvil_cleanser.rs  block_provider.rs  mod.rs  rpc_provider.rs  state_provider.rs  state_provider_factory.rs
testing-tools/src/contracts/: anvil.rs  mod.rs  reward.rs
testing-tools/src/mocks/: canon_state.rs  consensus.rs  eth_events.rs  mod.rs  network_events.rs  validator.rs
testing-tools/src/network/: consensus_future.rs  eth_peer.rs  mod.rs  network_future.rs  strom_peer.rs
testing-tools/src/order_generator/: arbitrage.rs  mod.rs  price_feed.rs  user_order.rs
testing-tools/src/order_pool/: mod.rs
testing-tools/src/testnet_controllers/: config.rs  mod.rs  node.rs  state_lock.rs  state_machine.rs  strom_internals.rs  testnet.rs  utils.rs
testing-tools/src/testnet_node/: add_liquidity.rs  addresses.rs  main.rs  order_submitter.rs  rpc_state_provider.rs
testing-tools/src/type_generator/: amm.rs  book.rs  builder.rs  consensus.rs  mod.rs  orders.rs
testing-tools/src/types/: events.rs  handles.rs  hooks.rs  mod.rs
testing-tools/src/validation/: mod.rs
testing-tools/testing-tools-macros/: Cargo.toml
testing-tools/testing-tools-macros/src/: lib.rs  randomizer.rs
(+767 files in other folders)
