[workspace]
members = [
  "bin/angstrom",
  "crates/angstrom-net",
  "crates/consensus",
  "crates/types",
  "crates/utils",
  "crates/validation",
  "crates/order-pool",
  "crates/rpc",
  "crates/eth/",
  "crates/submission",
]


#default-members = ["bin/angstrom"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SorellaLabs/angstrom"
repository = "https://github.com/SorellaLabs/angstrom"
exclude = [".github/"]


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 15

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false


[workspace.dependencies]
consensus = { path = "./crates/consensus/" }
angstrom-types = { path = "./crates/types/" }
angstrom-utils = { path = "./crates/utils/" }
validation = { path = "./crates/validation/" }
order-pool = { path = "./crates/order-pool/" }
angstrom-eth = { path = "./crates/eth/" }
angstrom-rpc = { path = "./crates/rpc/" }
angstrom-network = { path = "./crates/angstrom-net/" }


## async
async-trait = "0.1.68"
futures = "0.3.26"
pin-project = "1.1.3"
futures-util = "0.3.29"

# revm
revm = { version = "7.2.0", features = ["std", "secp256k1"] }

revm-primitives = { version = "3.1.0", features = [
  "std",
], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "0ad0338" }

# reth
reth = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-rlp = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc", features = [
  "alloc",
] }

reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }

# alloy
alloy-sol-types = { version = "0.7.0", features = ["json"] }
alloy-sol-macro = { version = "0.7.0", features = ["json"] }
alloy-rlp = { version = "0.3.4" }
alloy-rlp-derive = { version = "0.3.4" }
alloy-primitives = { version = "0.7.0", features = ["rlp"] }

hex-literal = "0.4.1"
ethers-core = { version = "2.0.10", default-features = false }
ethers-providers = { version = "2.0.10", features = ["ws"] }
ethers-signers = { version = "2.0.10", default-features = false }
ethers-middleware = { version = "2.0.10", default-features = false }

# anvil = { git = "https://github.com/SorellaLabs/fastfoundry" }
# anvil-core = { git = "https://github.com/SorellaLabs/fastfoundry" }

## misc
bytes = "1.4"
bitflags = "2.3"
tracing = "0.1.0"
tracing-appender = "0.2"
thiserror = "1.0"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
rand = "0.8.5"
strum = "0.26.2"
rayon = "1.7"
itertools = "0.12.1"
parking_lot = "0.12"
metrics = "0.21.1"                                    # Needed for `metrics-macro` to resolve the crate using `::metrics` notation
anyhow = "1.0.75"
url = "2.4.1"
auto_impl = "1.1.0"

### proc-macros
proc-macro2 = "1.0"
quote = "1.0"

## tokio
tokio-stream = "0.1.11"
tokio = { version = "1.21", features = ["full"], default-features = false }
tokio-util = { version = "0.7.4", features = ["codec"] }


## json
jsonrpsee = { version = "0.22.3" }
jsonrpsee-core = { version = "0.22.3" }
jsonrpsee-types = { version = "0.22.3" }


## crypto
secp256k1 = { version = "0.27.0", default-features = false, features = [
  "global-context",
  "rand-std",
  "recovery",
] }
enr = { version = "=0.10.0", default-features = false, features = ["k256"] }


aquamarine = "0.5.0"

# misc-testing
arbitrary = "1.1"
assert_matches = "1.5.0"
tempfile = "3.8"
criterion = "0.5"
pprof = "0.13"
proptest = "1.0"
proptest-derive = "0.4"
serial_test = "3.0.0"
