[workspace]
members = [
  "bin/angstrom",
  "bin/testnet",
  "crates/angstrom-net",
  "crates/consensus",
  "crates/types",
  "crates/utils",
  "crates/validation",
  "crates/order-pool",
  "crates/rpc",
  "crates/eth/",
  "crates/submission",
  "testing-tools",
  "crates/matching-engine",
]


#default-members = ["bin/angstrom"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SorellaLabs/angstrom"
repository = "https://github.com/SorellaLabs/angstrom"
exclude = [".github/"]


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 15

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false


[workspace.dependencies]
consensus = { path = "./crates/consensus/" }
angstrom-types = { path = "./crates/types/" }
angstrom-utils = { path = "./crates/utils/" }
validation = { path = "./crates/validation/" }
order-pool = { path = "./crates/order-pool/" }
angstrom-eth = { path = "./crates/eth/" }
angstrom-rpc = { path = "./crates/rpc/" }
angstrom-network = { path = "./crates/angstrom-net/" }
testing-tools = { path = "./testing-tools/" }
angstrom = { path = "./bin/angstrom/" }
matching-engine = { path = "./crates/matching-engine/" }
eyre = "0.3.7"

# BLS library
blsful = "2.5.7"

## async
async-trait = "0.1.68"
futures = "0.3.26"
pin-project = "1.1.3"
futures-util = "0.3.29"

## bitmaps
bitmaps = "3.2.1"

# revm
revm = { version = "10.0.0", features = [
  "std",
  "secp256k1",
  "blst",
], default-features = false }
# revm-primitives = { version = "5.0.0", features = ["serde"] }
# revm-inspectors = "0.1"

# reth
reth = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-rlp = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0", features = [
  "alloc",
] }
reth-errors = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-network = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.0.0", tag = "v1.0.0" }

# alloy
alloy = { version = "0.1", features = [
  "full",
  "node-bindings",
  "rpc-types-debug",
  "rpc-types-trace",
  "json-rpc",
  "rpc-client",
  "signer-aws",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-yubihsm",
] }
alloy-chains = "0.1.15"
alloy-primitives = "0.7.2"
alloy-sol-macro = "0.7.2"
alloy-dyn-abi = "0.7.2"
alloy-sol-types = "0.7.2"
alloy-rlp = "0.3.4"
alloy-rlp-derive = "0.3.4"
alloy-trie = "0.4"
alloy-rpc-types = { version = "0.1", default-features = false, features = [
  "eth",
] }
alloy-rpc-types-anvil = { version = "0.1", default-features = false }
alloy-rpc-types-beacon = { version = "0.1", default-features = false }
alloy-rpc-types-admin = { version = "0.1", default-features = false }
alloy-rpc-types-txpool = { version = "0.1", default-features = false }
alloy-serde = { version = "0.1", default-features = false }
alloy-rpc-types-engine = { version = "0.1", default-features = false }
alloy-rpc-types-eth = { version = "0.1", default-features = false }
alloy-rpc-types-trace = { version = "0.1", default-features = false }
alloy-genesis = { version = "0.1", default-features = false }
alloy-node-bindings = { version = "0.1", default-features = false }
alloy-provider = { version = "0.1", default-features = false, features = [
  "reqwest",
] }
alloy-eips = { version = "0.1", default-features = false }
alloy-signer = { version = "0.1", default-features = false }
alloy-signer-local = { version = "0.1", default-features = false }
alloy-network = { version = "0.1", default-features = false }
alloy-consensus = { version = "0.1", default-features = false }
alloy-transport = { version = "0.1" }
alloy-transport-http = { version = "0.1", features = [
  "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "0.1", default-features = false }
alloy-transport-ipc = { version = "0.1", default-features = false }
alloy-pubsub = { version = "0.1", default-features = false }
alloy-json-rpc = { version = "0.1", default-features = false }
alloy-rpc-client = { version = "0.1", default-features = false }

# Uniswap math helpers
uniswap_v3_math = "0.4.1"

hex-literal = "0.4.1"

## misc
bytes = "1.4"
bincode = "2.0.0-rc.3"
bitflags = "2.3"
tracing = "0.1.0"
tracing-appender = "0.2"
tracing-subscriber = "0.3.18"
thiserror = "1.0"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
strum = "0.26.2"
rayon = "1.7"
itertools = "0.12.1"
parking_lot = "0.12"
metrics = "0.21.1"                                                           # Needed for `metrics-macro` to resolve the crate using `::metrics` notation
anyhow = "1.0.75"
url = "2.4.1"
auto_impl = "1.1.0"

### proc-macros
proc-macro2 = "1.0"
quote = "1.0"

## tokio
tokio-stream = "0.1.11"
tokio = { version = "1.21", features = [
  "full",
  "tracing",
], default-features = false }
tokio-util = { version = "0.7.4", features = ["codec"] }


## json
jsonrpsee = "0.23"
jsonrpsee-core = "0.23"
jsonrpsee-types = "0.23"
jsonrpsee-http-client = "0.23"

## crypto
secp256k1 = { version = "0.29.0", default-features = false, features = [
  "global-context",
  "rand-std",
  "recovery",
] }
enr = { version = "=0.10.0", default-features = false, features = ["k256"] }


aquamarine = "0.5.0"

# misc-testing
arbitrary = "1.1"
assert_matches = "1.5.0"
tempfile = "3.8"
criterion = "0.5"
pprof = "0.13"
proptest = "1.0"
proptest-derive = "0.4"
serial_test = "3.0.0"
