[package]
name = "testing-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
blsful.workspace = true
consensus.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
angstrom-network.workspace = true
angstrom-eth.workspace = true
angstrom-rpc.workspace = true
angstrom.workspace = true
order-pool.workspace = true
validation.workspace = true
matching-engine.workspace = true

reth-network-api.workspace = true
reth-codecs.workspace = true
reth-tasks.workspace = true
reth-rpc-types.workspace = true
reth-eth-wire.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
alloy.workspace = true
alloy-rlp.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true

reth-node-ethereum.workspace = true
reth-revm.workspace = true
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4" }
alloy-chains.workspace = true


# Revision `6aab216` selected so it matches with reth's
alloy-provider = "0.2"
alloy-transport = "0.2"

# reth
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4", tag = "v1.0.4", features = [
  "test-utils",
] }
# reth-interfaces = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["test-utils"] }

# we need to enable the test-utils feature in our own crate to use utils in
# integration tests
reth-network = { workspace = true, features = ["test-utils"] }
reth-metrics.workspace = true

tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
reth-db.workspace = true


enr = { workspace = true, features = ["serde", "rust-secp256k1"] }
rand.workspace = true
rand_distr.workspace = true
secp256k1.workspace = true

# misc
serial_test.workspace = true
tempfile.workspace = true

parking_lot.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
uniswap_v3_math.workspace = true
