[package]
name = "angstrom-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Ethereum network support
"""

[package.metadata.cargo-udeps.ignore]
normal = [
  # Used for diagrams in docs
  "aquamarine",
]

[dependencies]
# reth
reth-interfaces.workspace = true
reth-primitives.workspace = true
reth-network-api.workspace = true
reth-codecs.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true
reth-provider.workspace = true
reth-rpc-types.workspace = true
reth-eth-wire.workspace = true
reth-network.workspace = true
reth-net-common = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc" }

alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-rlp.workspace = true
alloy-rlp-derive.workspace = true

anyhow.workspace = true


angstrom-eth.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
order-pool.workspace = true
validation.workspace = true

# async/futures
futures.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = [
  "io-util",
  "net",
  "macros",
  "rt-multi-thread",
  "time",
] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec"] }


# io
serde = { workspace = true, optional = true }
humantime-serde = { version = "1.1", optional = true }
serde_json = { workspace = true, optional = true }

# metrics
reth-metrics = { workspace = true, features = ["common"] }
metrics.workspace = true

# misc
auto_impl = "1"
aquamarine = "0.5.0"
tracing.workspace = true
fnv = "1.0"
thiserror.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
linked_hash_set = "0.1"
linked-hash-map = "0.5.6"
rand.workspace = true
secp256k1 = { workspace = true, features = [
  "global-context",
  "rand-std",
  "recovery",
] }

enr = { workspace = true, features = ["rust-secp256k1"], optional = true }
tempfile = { version = "3.3", optional = true }

[dev-dependencies]
testing-tools.workspace = true
angstrom-network.workspace = true
# reth
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "6a104cc", features = [
  "test-utils",
] }
reth-interfaces = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["test-utils"] }

# we need to enable the test-utils feature in our own crate to use utils in
# integration tests
reth-network = { workspace = true, features = ["test-utils"] }
reth-metrics.workspace = true

reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }

rand.workspace = true
secp256k1.workspace = true

# misc
serial_test.workspace = true
tempfile.workspace = true


[features]
default = ["serde"]
serde = [
  "dep:serde",
  "dep:humantime-serde",
  "secp256k1/serde",
  "enr?/serde",
  "dep:serde_json",
]
test-utils = [
  "reth-provider/test-utils",
  "dep:enr",
  "dep:tempfile",
]
geth-tests = []
test_harness = ["default"]
