[package]
name = "bundler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true


[dependencies]
sim.workspace = true
ethers-core.workspace = true
shared.workspace = true
