[package]
name = "bundler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true


[dependencies]
tracing.workspace = true
sim.workspace = true
tokio.workspace = true
serde_json.workspace = true
reth-primitives.workspace = true
ethers-core.workspace = true
ethers-signers.workspace = true
shared.workspace = true
futures.workspace = true
thiserror.workspace = true
revm.workspace = true
revm-primitives.workspace = true

[features]
test_harness = []
