[package]
name = "consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
reth-primitives.workspace = true
ethers-providers.workspace = true
ethers-signers.workspace = true
ethers-middleware.workspace = true
ethers-core.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
anyhow.workspace = true
url.workspace = true
serde_json.workspace = true
hex-literal.workspace = true
revm-primitives.workspace = true
rayon.workspace = true
alloy-rlp.workspace = true

guard-types.workspace = true
common.workspace = true
tokio-stream.workspace = true
