[package]
name = "consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
reth-primitives.workspace = true
ethers-providers.workspace = true
ethers-signers.workspace = true
ethers-middleware.workspace = true
ethers-core.workspace = true
reth-metrics.workspace = true
reth-provider.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
anyhow.workspace = true
url.workspace = true
serde_json.workspace = true
hex-literal.workspace = true
rayon.workspace = true
alloy-rlp.workspace = true
reth-tasks.workspace = true

guard-types.workspace = true
guard-utils.workspace = true
guard-network.workspace = true
order-pool.workspace = true
validation.workspace = true
tokio-stream.workspace = true

alloy-primitives.workspace = true   
