[package]
name = "angstrom-eth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true


[dependencies]
angstrom-types.workspace = true
angstrom-utils.workspace = true

tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true

# reth
reth-provider.workspace = true
reth-tasks.workspace = true

# alloy  
alloy-primitives.workspace = true
#alloy-providers.workspace = true

# ethers
ethers-middleware.workspace = true
ethers-signers.workspace = true
ethers-providers.workspace = true
ethers-flashbots = "0.15.0"
ethers-core.workspace = true

# misc
anyhow.workspace = true
