[package]
name = "angstrom-eth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true


[dependencies]
angstrom-types.workspace = true
angstrom-utils.workspace = true
pade.workspace = true
alloy-sol-types.workspace = true

tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true

# reth
reth-provider.workspace = true
reth-tasks.workspace = true

# alloy  
alloy.workspace = true


# misc
anyhow.workspace = true
