[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dev-dependencies]
testing-tools.workspace = true
divan = "0.1.14"

[dependencies]
angstrom-types.workspace = true
angstrom-utils.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
uniswap_v3_math.workspace = true
malachite = "0.4.0"
malachite-q = "0.4.0"
rand.workspace = true
rand_distr.workspace = true
tokio.workspace = true
reth-tasks.workspace = true
criterion.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

arraydeque = "0.5"
alloy = { version = "0.2", features = [
    "contract",
    "network",
    "provider-ws",
    "rpc-types-eth",
    "signer-local",
    "json-rpc"
] }

# Using clap for our bookgen command-line tool
clap = "4.5.4"
amms = { git = "https://github.com/darkforestry/amms-rs.git", rev ="643b049"}

[[bench]]
name = "volume_solver"
harness = false


[profile.maxperf]
lto = "fat"
codegen-units = 1
incremental = false
opt-level = 3
panic = 'abort'
overflow-checks = false
